--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.2.0",
     "pinia": "^2.2.6",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
