--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "gh-pages": "^6.2.0",
     "pinia": "^2.2.6",
     "sweetalert2": "^11.14.5",
